feat: Add typewriter animation for AI messages and a typing indicator.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shadcn_flutter: ^0.0.47
   google_fonts: ^6.2.1
   http_parser: ^4.1.2
+  flutter_markdown: ^0.7.7+1
 
 dev_dependencies:
   flutter_test:
